working on the api intigration for the organization also done some change in the validation for the login

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicon/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="orbitrms" content= "a1vvdEgbvAIpG24-m63gxgli" >
     <title>Vite + React + TS</title>
   </head>
   <body>
